PP-14728 - Replaced .get(0) to .getFirst() (#6113)
* PP-14728 - Replaced .get(0) to .getFirst()

* PP-14728 - these do not have .getFirst() available