@@ -224,7 +224,7 @@ public class GatewayAccountDaoIT {
 
             List<GatewayAccountEntity> gatewayAccounts = gatewayAccountDao.search(params);
             assertThat(gatewayAccounts, hasSize(2));
-            assertThat(gatewayAccounts.get(0).getId(), is(gatewayAccountId_1));
+            assertThat(gatewayAccounts.getFirst().getId(), is(gatewayAccountId_1));
             assertThat(gatewayAccounts.get(1).getId(), is(gatewayAccountId_2));
         }
 
@@ -252,8 +252,8 @@ public class GatewayAccountDaoIT {
 
             List<GatewayAccountEntity> gatewayAccounts = gatewayAccountDao.search(params);
             assertThat(gatewayAccounts, hasSize(2));
-            assertThat(gatewayAccounts.get(0).getId(), is(gatewayAccountId_1));
-            assertThat(gatewayAccounts.get(0).getExternalId(), is(externalId_1));
+            assertThat(gatewayAccounts.getFirst().getId(), is(gatewayAccountId_1));
+            assertThat(gatewayAccounts.getFirst().getExternalId(), is(externalId_1));
             assertThat(gatewayAccounts.get(1).getId(), is(gatewayAccountId_2));
             assertThat(gatewayAccounts.get(1).getExternalId(), is(externalId_2));
         }
@@ -276,7 +276,7 @@ public class GatewayAccountDaoIT {
 
             List<GatewayAccountEntity> gatewayAccounts = gatewayAccountDao.search(params);
             assertThat(gatewayAccounts, hasSize(1));
-            assertThat(gatewayAccounts.get(0).getId(), is(gatewayAccountId_2));
+            assertThat(gatewayAccounts.getFirst().getId(), is(gatewayAccountId_2));
         }
 
         @Test
@@ -297,7 +297,7 @@ public class GatewayAccountDaoIT {
 
             List<GatewayAccountEntity> gatewayAccounts = gatewayAccountDao.search(params);
             assertThat(gatewayAccounts, hasSize(1));
-            assertThat(gatewayAccounts.get(0).getId(), is(gatewayAccountId_2));
+            assertThat(gatewayAccounts.getFirst().getId(), is(gatewayAccountId_2));
         }
 
         @Test
@@ -318,7 +318,7 @@ public class GatewayAccountDaoIT {
 
             List<GatewayAccountEntity> gatewayAccounts = gatewayAccountDao.search(params);
             assertThat(gatewayAccounts, hasSize(1));
-            assertThat(gatewayAccounts.get(0).getId(), is(gatewayAccountId_2));
+            assertThat(gatewayAccounts.getFirst().getId(), is(gatewayAccountId_2));
         }
 
         @Test
@@ -339,7 +339,7 @@ public class GatewayAccountDaoIT {
 
             List<GatewayAccountEntity> gatewayAccounts = gatewayAccountDao.search(params);
             assertThat(gatewayAccounts, hasSize(1));
-            assertThat(gatewayAccounts.get(0).getId(), is(gatewayAccountId_2));
+            assertThat(gatewayAccounts.getFirst().getId(), is(gatewayAccountId_2));
         }
 
         @Test
@@ -360,7 +360,7 @@ public class GatewayAccountDaoIT {
 
             List<GatewayAccountEntity> gatewayAccounts = gatewayAccountDao.search(params);
             assertThat(gatewayAccounts, hasSize(1));
-            assertThat(gatewayAccounts.get(0).getId(), is(gatewayAccountId_2));
+            assertThat(gatewayAccounts.getFirst().getId(), is(gatewayAccountId_2));
         }
 
         @Test
@@ -432,7 +432,7 @@ public class GatewayAccountDaoIT {
 
             List<GatewayAccountEntity> gatewayAccounts = gatewayAccountDao.search(params);
             assertThat(gatewayAccounts, hasSize(1));
-            assertThat(gatewayAccounts.get(0).getId(), is(gatewayAccountId_1));
+            assertThat(gatewayAccounts.getFirst().getId(), is(gatewayAccountId_1));
         }
 
         @Test
@@ -449,7 +449,7 @@ public class GatewayAccountDaoIT {
 
             List<GatewayAccountEntity> gatewayAccounts = gatewayAccountDao.search(params);
             assertThat(gatewayAccounts, hasSize(1));
-            assertThat(gatewayAccounts.get(0).getId(), is(gatewayAccountId));
+            assertThat(gatewayAccounts.getFirst().getId(), is(gatewayAccountId));
         }
 
         @Test
@@ -466,7 +466,7 @@ public class GatewayAccountDaoIT {
 
             List<GatewayAccountEntity> gatewayAccounts = gatewayAccountDao.search(params);
             assertThat(gatewayAccounts, hasSize(1));
-            assertThat(gatewayAccounts.get(0).getId(), is(gatewayAccountId));
+            assertThat(gatewayAccounts.getFirst().getId(), is(gatewayAccountId));
         }
 
         @Test
@@ -483,7 +483,7 @@ public class GatewayAccountDaoIT {
 
             List<GatewayAccountEntity> gatewayAccounts = gatewayAccountDao.search(params);
             assertThat(gatewayAccounts, hasSize(1));
-            assertThat(gatewayAccounts.get(0).getId(), is(gatewayAccountId));
+            assertThat(gatewayAccounts.getFirst().getId(), is(gatewayAccountId));
         }
 
         @Test
@@ -500,7 +500,7 @@ public class GatewayAccountDaoIT {
 
             List<GatewayAccountEntity> gatewayAccounts = gatewayAccountDao.search(params);
             assertThat(gatewayAccounts, hasSize(1));
-            assertThat(gatewayAccounts.get(0).getId(), is(gatewayAccountId));
+            assertThat(gatewayAccounts.getFirst().getId(), is(gatewayAccountId));
         }
     }
     
